# Gmail-MCP-Server

./: Dockerfile  Makefile  README-serve.md  pyproject.toml
.github/workflows/: ci.yaml
gmail_mcp_serve/: __init__.py  compat.py  gmail_stdio.py  http_app.py  http_serve.py
tests/: test_http_app.py
